<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Login Activity Strings -->

    <string name="app_name">Infinity Nurse</string>
    <string name="login_text">Nurse Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="add_nurse_button_text">Add Nurse</string>
    <string name="action_settings">Settings</string>

    <!-- New Nurse Activity Strings -->

    <string name="title_activity_new_nurse">New User</string>
    <string name="new_nurse_text">Create A New Nurse</string>
    <string name="name_hint">Full Name</string>
    <string name="dob_hint">Date of Birth (dd/mm/yyyy)</string>
    <string name="healthcard_hint">Health Card Number</string>
    <string name="create_button_text">Create</string>
    <string name="doc_visit_hint">Doctor Visit Time</string>

    <!-- Home Activity Strings -->

    <string name="title_activity_home">Home</string>
    <string name="list_patients_button_text">List Patients</string>
    <string name="add_patient_button_text">Add A Patient</string>
    <string name="save_button_text">Save All</string>
    <string name="quit_button_text">Save &amp; Quit</string>
    <string name="title_activity_new_patient">Add A New Patient</string>
    <string name="lookup_button_text">Search by Healthcard</string>
    <string name="welcome_message">Welcome</string>

    <!-- Add Patient Activity Strings -->

    <string name="patient_name_hint">Patient Name</string>
    <string name="patient_healthcard_hint">Health Card Number</string>
    <string name="patient_arrival_hint">Arrival Time</string>
    <string name="patient_temp_hint">Temperature</string>
    <string name="patient_bloodSys_hint">Blood Pressure (Systolic)</string>
    <string name="patient_bloodDia_hint">Blood Pressure (Diastolic)</string>
    <string name="patient_heart_hint">Heart Rate</string>
    <string name="add_button_text">Add</string>

    <!-- List Patient Activity Strings -->

    <string name="list_patient_text">Patients</string>
    <string name="title_activity_list_patients">List Of Patients</string>
    <string name="view_urgency_item">Sort by Urgency</string>
    <string name="view_all_item">View All</string>

    <!-- Colors -->

    <color name="bg_color">#FFFFFF</color>
    <color name="hint_color">#2c3539</color>

    <!-- View Patient Activity String -->

    <string name="title_activity_view_patient">Patient Details</string>
    <string name="patient_temp_label">Temperature</string>
    <string name="patient_bloodSys_label">Blood Pressure (Systolic)</string>
    <string name="patient_bloodDia_label">Blood Pressure (Diastolic)</string>
    <string name="patient_arrival_label">Arrival Time</string>
    <string name="patient_healthcard_label">Healthcard Number</string>
    <string name="patient_heart_label">Heart Rate</string>
    <string name="patient_dob_label">Date of Birth</string>
    <string name="patient_name_label">Name</string>
    <string name="update_button_text">Update</string>
    <string name="doc_visit_label">Doctor Visit Time</string>
    <string name="view_patient_title_text">Patient Details</string>
    <string name="record_action_text">View Record</string>

    <!-- Record List Activity String -->

    <string name="title_activity_record_list">Patient Records</string>

    <!-- View Record Activity Strings -->

    <string name="title_activity_view_record">Patient Record</string>

    <!-- Lookup Activity Strings -->

    <string name="title_activity_lookup">Lookup Patient</string>
    <string name="lookup_button">Search</string>
    <string name="healthcard_prompt">Enter a Healthcard Number:</string>

    <!-- Static Patient Activity Strings -->

    <string name="title_activity_static_patient">View Patient Details</string>
    <string name="pre_info_label">Prescription Instructions</string>
    <string name="pre_name_label">Prescription Name</string>
    <string name="pre_action_text">Add Prescription</string>
    <string name="edit_action_text">Edit Info</string>

    <!-- Add Prescription Activity Strings -->
    <string name="title_activity_add_prescription">Add A Prescription</string>
    <string name="hello_world">Hello world!</string>

</resources>
