<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/record_action"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/record_action_text"/>
    
    <item 
        android:id="@+id/edit_action"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/edit_action_text"
        />
    
    <item 
        android:id="@+id/pre_action"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/pre_action_text"
        />
	
</menu>
