<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewPatientActivity" >

    <EditText
        android:id="@+id/patient_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_healthcard_field"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/patient_name_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColorHint="@color/hint_color" />

    <Button
        android:id="@+id/create_patient_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="createPatient"
        android:text="@string/add_button_text" />

    <EditText
        android:id="@+id/patient_dob_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_heart_field"
        android:layout_centerHorizontal="true"
        android:ems="12"
        android:hint="@string/dob_hint"
        android:inputType="number"
        android:maxLength="8"
        android:singleLine="true"
        android:textColorHint="@color/hint_color" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/patient_heart_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_bloodDia_field"
        android:layout_below="@+id/patient_bloodDia_field"
        android:ems="10"
        android:hint="@string/patient_heart_hint"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/patient_bloodDia_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_bloodSys_field"
        android:layout_below="@+id/patient_bloodSys_field"
        android:ems="10"
        android:hint="@string/patient_bloodDia_hint"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/patient_bloodSys_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_temp_field"
        android:layout_below="@+id/patient_temp_field"
        android:ems="10"
        android:hint="@string/patient_bloodSys_hint"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/patient_temp_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_arrival_field"
        android:layout_below="@+id/patient_arrival_field"
        android:ems="10"
        android:hint="@string/patient_temp_hint"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/patient_arrival_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_healthcard_field"
        android:layout_below="@+id/patient_healthcard_field"
        android:ems="10"
        android:hint="@string/patient_arrival_hint"
        android:inputType="time"
        android:singleLine="true"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/patient_healthcard_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_name_field"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/patient_healthcard_hint"
        android:singleLine="true"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/doc_visit_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_dob_field"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/doc_visit_hint"
        android:singleLine="true"
        android:inputType="number"
        android:textColorHint="@color/hint_color"
         />

</RelativeLayout>