<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >
    
    <TextView
        android:id="@+id/nurse_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_message" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="saveAll"
        android:text="@string/save_button_text" />

    <Button
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="quit"
        android:text="@string/quit_button_text" />

    <TextView
        android:id="@+id/save_textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quit_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text=""
        android:textColor="#00CC00" />

    <Button
        android:id="@+id/add_patient_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nurse_name_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:onClick="addPatient"
        android:text="@string/add_patient_button_text" />

    <Button
        android:id="@+id/lookup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_patient_button"
        android:layout_centerHorizontal="true"
        android:onClick="toLookupActivity"
        android:text="@string/lookup_button_text" />
        
    <Button
        android:id="@+id/list_patients_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lookup_button"
        android:layout_centerHorizontal="true"
        android:text="@string/list_patients_button_text"
        android:onClick="listPatients" />

</RelativeLayout>