<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewNurseActivity" >

    <TextView
        android:id="@+id/new_nurse_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/new_nurse_text" />

    <EditText
        android:textColorHint="@color/hint_color"
        android:id="@+id/new_username_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_nurse_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:textColorHint="@color/hint_color"
        android:id="@+id/new_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_username_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:singleLine="true" />

    <EditText
        android:textColorHint="@color/hint_color"
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_hint"
        android:singleLine="true" />

    <EditText
        android:textColorHint="@color/hint_color"
        android:id="@+id/dob_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="12"
        android:inputType="date"
        android:hint="@string/dob_hint"
        android:singleLine="true"
        android:maxLength="8"
         />

    <EditText
        android:textColorHint="@color/hint_color"
        android:id="@+id/healthcard_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dob_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/healthcard_hint"
        android:singleLine="true" />

    <Button
        android:textColorHint="@color/hint_color"
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/healthcard_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/create_button_text"
        android:onClick="createNurse"
         />

</RelativeLayout>
